syntax = "proto3";

package rivet.backend.pkg.mm_config.lobby_group_resolve_version;

import "proto/common.proto";

message Request {
	repeated rivet.common.Uuid lobby_group_ids = 1;
}

message Response {
	message Version {
		rivet.common.Uuid version_id = 1;
		rivet.common.Uuid lobby_group_id = 2;
	}

	repeated Version versions = 1;
}
